--- a/superteam.ipynb
+++ b/superteam.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,17 @@
     "import pandas as pd\n",
     "pd.options.mode.chained_assignment = None\n",
     "import pymongo\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nba_games = leaguegamefinder.LeagueGameFinder(\n",
+    "    league_id_nullable=\"00\"\n",
+    ").get_data_frames()[0]"
    ]
   },
   {
