--- a/model.ipynb
+++ b/model.ipynb
@@ -47,6 +47,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lol\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('lol')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
