Fix up tournament

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/main/lib/python3.9/site-packages/xgboost/compat.py:31: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pymongo\n",
     "client = pymongo.MongoClient(\"mongodb+srv://superteam:4NgVPcNjmKBQkMTd@cluster0.sfhws.mongodb.net/dev?retryWrites=true&w=majority\")\n",
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,24 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lol\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('lol')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x7fb7552e1d40>"
+       "<pymongo.results.DeleteResult at 0x7fe0c2621b80>"
       ]
      },
-     "execution_count": 482,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 207/207 [00:15<00:00, 13.55it/s]\n"
+      "100%|██████████| 1047/1047 [01:22<00:00, 12.67it/s]\n"
      ]
     }
    ],
