uber team active

--- a/model.ipynb
+++ b/model.ipynb
@@ -1986,6 +1986,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['Paul George', 'Al Horford', 'Seth Curry', 'Oshae Brissett', 'Josh Richardson', 'Jonathan Kuminga', 'George Hill', 'Thomas Bryant', 'Wenyen Gabriel', 'Tyler Cook', 'Jay Scrubb', 'Kevin Knox II', 'Kelan Martin']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['Luka Doncic', 'Dorian Finney-Smith', 'Reggie Bullock', 'Marcus Smart', \"De'Andre Hunter\", 'Darius Bazley', 'Al Horford', 'Isaiah Stewart', 'Grayson Allen', 'Killian Hayes', 'Juancho Hernangomez', 'Skylar Mays', 'RJ Nembhard Jr.']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
