why didnt it save smhh

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "import pymongo\n",
-    "\n",
+    "import random\n",
     "client = pymongo.MongoClient(\n",
     "    \"mongodb+srv://superteam:4NgVPcNjmKBQkMTd@cluster0.sfhws.mongodb.net/dev?retryWrites=true&w=majority\"\n",
     ")\n",
@@ -36,17 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = xgb.XGBRegressor()\n",
-    "model.load_model(\"models/13_player_model.json\")"
+    "model.load_model(\"models/13_player_model_new.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 30/30 [00:17<00:00,  1.75it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "results_dict = simulate_regular_season()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,27 +204,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.8231716,  1.1710908], dtype=float32)"
+       "array([4.607529, 6.245342], dtype=float32)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "simulate_matchup('NOP','CHA')"
+    "simulate_matchup('MIL','ORL')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,16 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,173 +367,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Zach LaVine', 'Joel Embiid', 'Cedi Osman', 'Bryn Forbes', 'Derrick Jones Jr.', 'D.J. Wilson', 'Jalen Brunson', 'CJ Elleby', 'RJ Barrett', 'Armoni Brooks', 'Obi Toppin', 'Miles McBride', 'Joel Ayayi']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:12<00:00, 82.22it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.11\n",
-      "['D.J. Augustin', 'Marquese Chriss', 'Kris Dunn', 'Alex Caruso', 'Thomas Bryant', \"De'Anthony Melton\", 'Gabe Vincent', 'Terance Mann', 'Eric Paschall', 'Trey Murphy III', 'Chris Duarte', 'Josh Giddey', 'Georgios Kalaitzakis']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:12<00:00, 79.08it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.367\n",
-      "['Dwight Howard', 'Jimmy Butler', 'Austin Rivers', 'Tony Snell', 'Trey Burke', 'Caleb Martin', 'Jarrett Culver', 'Keldon Johnson', 'Romeo Langford', 'Talen Horton-Tucker', 'Eric Paschall', 'Desmond Bane', 'Evan Mobley']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:12<00:00, 79.18it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.503\n",
-      "['Kyle Anderson', 'Tyus Jones', 'Delon Wright', 'Damian Jones', 'Cameron Oliver', 'Kevin Porter Jr.', 'Ignas Brazdeikis', 'Luguentz Dort', 'Neemias Queta', 'Juwan Morgan', 'Hassani Gravett', 'LaMelo Ball', 'Robert Woodard II']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:12<00:00, 78.75it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.695\n",
-      "['Tobias Harris', 'Kelly Olynyk', 'Donte DiVincenzo', 'P.J. Washington', 'Zylan Cheatham', 'Nassir Little', 'Dean Wade', 'Isaac Okoro', 'Trevelin Queen', \"Jae'Sean Tate\", 'Sam Hauser', 'Moses Wright', 'McKinley Wright IV']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:12<00:00, 77.69it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.777\n",
-      "['Kyle Lowry', 'Bradley Beal', 'Rudy Gobert', 'Cedi Osman', 'Boban Marjanovic', 'Derrick White', 'Maxi Kleber', 'Hamidou Diallo', 'Brandon Clarke', 'Dean Wade', 'Robert Woodard II', 'Kenyon Martin Jr.', 'Aaron Henry']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:12<00:00, 78.98it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.899\n",
-      "['Paul George', 'Ish Smith', 'Klay Thompson', 'Marcus Morris Sr.', 'Kentavious Caldwell-Pope', 'Khem Birch', 'Doug McDermott', 'Daniel Theis', 'Derrick Walton Jr.', 'Gabe Vincent', 'Didi Louzada', 'Desmond Bane', 'Jalen Johnson']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:13<00:00, 72.00it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.922\n",
-      "['Stephen Curry', 'Dennis Schroder', 'Steven Adams', 'Derrick Jones Jr.', 'Bruno Fernando', 'Landry Shamet', 'Ja Morant', 'Javonte Green', 'Killian Hayes', 'Patrick Williams', 'Omer Yurtseven', 'Jared Butler', 'Micah Potter']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:16<00:00, 61.39it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.928\n",
-      "['Danilo Gallinari', 'Taj Gibson', 'Hassan Whiteside', 'Jae Crowder', 'Steven Adams', 'Duncan Robinson', 'Max Strus', 'Ignas Brazdeikis', 'Nic Claxton', 'Hassani Gravett', 'Xavier Tillman', 'Chris Duarte', 'Micah Potter']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:13<00:00, 76.17it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.951\n",
-      "['Kyrie Irving', 'Terry Rozier', 'Dejounte Murray', 'Derrick Jones Jr.', 'Alex Caruso', 'Mikal Bridges', 'Ja Morant', 'Darius Bazley', 'Leandro Bolmaro', 'Omer Yurtseven', 'Jonathan Kuminga', 'Facundo Campazzo', 'Feron Hunt']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:14<00:00, 69.20it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.974\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "super_team_ids = get_super_team()"
    ]
