--- a/model.ipynb
+++ b/model.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,12 +115,188 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FG2A = b_player.FGA-b_player.FG3A\n",
+    "PCT_FGA_2PT = FG2A.sum()/b_player.FGA.sum()\n",
+    "FG2M = b_player.FGM-b_player.FG3M\n",
+    "PCT_AST_2PM = (b_player.PCT_AST_2PM*FG2M).sum()/FG2M.sum()\n",
+    "PCT_PTS_2PT = FG2M.sum()*2/b_player.PTS.sum()\n",
+    "AST_PCT = b_player.AST.sum()/b_player.FGM.sum()\n",
+    "FG3_PCT = b_player.FG3M.sum()/b_player.FG3A.sum()\n",
+    "REB_PCT = b_player.REB.sum()/(a_player.REB.sum()+b_player.REB.sum())\n",
+    "PCT_PTS_OFF_TOV = b_player.PTS_OFF_TOV.sum()/b_player.PTS.sum()\n",
+    "OPP_OREB_PCT = a_player.OREB.sum()/(b_player.DREB.sum()+a_player.OREB.sum())\n",
+    "PCT_AST_3PM = (b_player.PCT_AST_3PM*b_player.FG3M).sum()/b_player.FG3M.sum()\n",
+    "PCT_UAST_3PM = 1 -(b_player.PCT_AST_3PM*b_player.FG3M).sum()/b_player.FG3M.sum()\n",
+    "DREB_PCT = a_player.DREB.sum()/(b_player.OREB.sum()+a_player.DREB.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6494845360824743"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PCT_FGA_2PT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PCT_FGA_2PT</th>\n",
+       "      <th>PCT_AST_2PM</th>\n",
+       "      <th>PCT_PTS_2PT</th>\n",
+       "      <th>AST_PCT</th>\n",
+       "      <th>FG3_PCT</th>\n",
+       "      <th>REB_PCT</th>\n",
+       "      <th>PCT_PTS_OFF_TOV</th>\n",
+       "      <th>OPP_OREB_PCT</th>\n",
+       "      <th>PCT_UAST_3PM</th>\n",
+       "      <th>DREB_PCT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>E_PACE</th>\n",
+       "      <th>AST_RATIO</th>\n",
+       "      <th>DIST</th>\n",
+       "      <th>AST_TOV</th>\n",
+       "      <th>FTA_RATE</th>\n",
+       "      <th>OPP_FTA_RATE</th>\n",
+       "      <th>MIN</th>\n",
+       "      <th>PACE_PER40</th>\n",
+       "      <th>PACE</th>\n",
+       "      <th>PIE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.649</td>\n",
+       "      <td>0.448</td>\n",
+       "      <td>0.532</td>\n",
+       "      <td>0.487</td>\n",
+       "      <td>0.294</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.156</td>\n",
+       "      <td>0.256</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.744</td>\n",
+       "      <td>...</td>\n",
+       "      <td>103.22</td>\n",
+       "      <td>13.9</td>\n",
+       "      <td>17.1</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.258</td>\n",
+       "      <td>0.313</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>0.443</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 87 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PCT_FGA_2PT  PCT_AST_2PM  PCT_PTS_2PT  AST_PCT  FG3_PCT  REB_PCT  \\\n",
+       "0        0.649        0.448        0.532    0.487    0.294     0.49   \n",
+       "\n",
+       "   PCT_PTS_OFF_TOV  OPP_OREB_PCT  PCT_UAST_3PM  DREB_PCT  ...  E_PACE  \\\n",
+       "0            0.156         0.256           0.4     0.744  ...  103.22   \n",
+       "\n",
+       "   AST_RATIO  DIST  AST_TOV  FTA_RATE  OPP_FTA_RATE    MIN  PACE_PER40   PACE  \\\n",
+       "0       13.9  17.1      1.9     0.258         0.313  240.0        85.0  102.0   \n",
+       "\n",
+       "     PIE  \n",
+       "0  0.443  \n",
+       "\n",
+       "[1 rows x 87 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_team"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = pd.concat(data_df_list).fillna(0).reset_index(drop=True)\n",
     "y = X.pop('PLUS_MINUS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PCT_FGA_2PT_1     -0.045240\n",
+       "PCT_AST_2PM_1      0.015924\n",
+       "PCT_PTS_2PT_1     -0.026473\n",
+       "AST_PCT_1          0.007352\n",
+       "PCT_FG3M_1         0.032734\n",
+       "                     ...   \n",
+       "OPP_FTA_RATE_26   -0.017861\n",
+       "MIN_26            -0.000649\n",
+       "PACE_PER40_26     -0.013513\n",
+       "PACE_26           -0.013514\n",
+       "PIE_26             0.003501\n",
+       "Length: 2730, dtype: float64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.corrwith(y)"
    ]
   },
   {
@@ -3375,32 +3551,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_model(\"models/13_player_model.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 611,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FG2A = b_player.FGA-b_player.FG3A\n",
-    "PCT_FGA_2PT = FG2A.sum()/b_player.FGA.sum()\n",
-    "FG2M = b_player.FGM-b_player.FG3M\n",
-    "PCT_AST_2PM = (b_player.PCT_AST_2PM*FG2M).sum()/FG2M.sum()\n",
-    "PCT_PTS_2PT = FG2M.sum()*2/b_player.PTS.sum()\n",
-    "AST_PCT = b_player.AST.sum()/b_player.FGM.sum()\n",
-    "FG3_PCT = b_player.FG3M.sum()/b_player.FG3A.sum()\n",
-    "REB_PCT = b_player.REB.sum()/(a_player.REB.sum()+b_player.REB.sum())\n",
-    "PCT_PTS_OFF_TOV = b_player.PTS_OFF_TOV.sum()/b_player.PTS.sum()\n",
-    "OPP_OREB_PCT = a_player.OREB.sum()/(b_player.DREB.sum()+a_player.OREB.sum())\n",
-    "PCT_AST_3PM = (b_player.PCT_AST_3PM*b_player.FG3M).sum()/b_player.FG3M.sum()\n",
-    "PCT_UAST_3PM = 1 -(b_player.PCT_AST_3PM*b_player.FG3M).sum()/b_player.FG3M.sum()\n",
-    "DREB_PCT = a_player.DREB.sum()/(b_player.OREB.sum()+a_player.DREB.sum())"
+    "model.save_model(\"models/13_player_model_new.json\")"
    ]
   },
   {
