--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = xgb.XGBRegressor()\n",
-    "model.load_model(\"models/13_player_model_new.json\")"
+    "model.load_model(\"models/13_player_model.json\")"
    ]
   },
   {
@@ -50,11 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "gamefinder = leaguegamefinder.LeagueGameFinder()\n",
     "all_games = gamefinder.get_data_frames()[0]\n",
     "current_season = all_games[all_games.SEASON_ID == \"22021\"]\n",
     "games = list(set(current_season.GAME_ID))\n",
+    "\n",
     "active_players = players.get_active_players()\n",
     "active_players = pd.DataFrame(active_players)\n",
     "active_player_ids = active_players.id.to_list()"
@@ -74,8 +74,6 @@
     }
    ],
    "source": [
-    "print(\"Loading Performances...\")\n",
-    "\n",
     "active_player_performances = pd.DataFrame(\n",
     "    list(\n",
     "        db.playerPerformances.find(\n",
@@ -94,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,19 +139,19 @@
     "\n",
     "        results_dict[team_A] = np.mean(win_loss_list)\n",
     "\n",
-    "    return results_dict\n"
+    "    return dict(sorted(results_dict.items(), key=lambda item: item[1],reverse=True))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:17<00:00,  1.75it/s]\n"
+      "100%|██████████| 30/30 [00:15<00:00,  1.91it/s]\n"
      ]
     }
    ],
@@ -163,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,22 +202,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4.607529, 6.245342], dtype=float32)"
+       "array([6.308787 , 1.5637933], dtype=float32)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "simulate_matchup('MIL','ORL')"
+    "simulate_matchup('BOS','PHX')"
    ]
   },
   {
@@ -242,13 +240,13 @@
     "            team_list.append(winner_team)\n",
     "            team_number = team_number - 1\n",
     "\n",
-    "        for n in range(team_number):\n",
+    "        for _ in range(team_number):\n",
     "            player_ids = player_pool.sample(team_size).PLAYER_ID\n",
     "            team = performances[performances[\"PLAYER_ID\"].isin(player_ids)]\n",
     "            player_pool = player_pool.drop(team.index)\n",
     "            team_list.append(team)\n",
     "\n",
-    "        for i in range(int(np.log2(team_count))):\n",
+    "        for _ in range(int(np.log2(team_count))):\n",
     "            it = iter(team_list)\n",
     "            team_list = []\n",
     "            for (teamA, teamB) in zip(it, it):\n",
@@ -308,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,6 +322,7 @@
     "        team_A_features = average_performances[average_performances[\"PLAYER_ID\"].isin(team_A_player_ids)]\n",
     "        players = team_A_features.PLAYER_NAME.to_list()\n",
     "        print(players)\n",
+    "        \n",
     "        team_A_features = team_A_features.iloc[:13,2:].reset_index(drop=True)\n",
     "        win_loss_list = []\n",
     "        better_teams = []\n",
@@ -367,9 +366,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Robin Lopez', 'Blake Griffin', 'Cory Joseph', 'Bradley Beal', 'Will Barton', 'Caris LeVert', 'Mychal Mulder', 'Udoka Azubuike', 'Donte DiVincenzo', 'Devontae Cacok', 'Hassani Gravett', 'Lamar Stevens', 'McKinley Wright IV']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:14<00:00, 68.95it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W/L:  0.133\n",
+      "['Khris Middleton', 'Spencer Dinwiddie', 'Stanley Johnson', 'Malik Monk', 'D.J. Wilson', 'Maxi Kleber', 'Troy Brown Jr.', 'Josh Okogie', 'Kyle Guy', 'Jalen McDaniels', 'Isaiah Stewart', 'Marko Simonovic', 'Terry Taylor']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:14<00:00, 70.70it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W/L:  0.813\n",
+      "['Davis Bertans', 'Nerlens Noel', 'Raul Neto', 'Doug McDermott', 'Dwight Powell', 'Andrew Wiggins', 'Jarred Vanderbilt', 'P.J. Washington', 'Chris Chiozza', 'KZ Okpala', 'Garrison Mathews', 'Malachi Flynn', 'Saben Lee']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:14<00:00, 71.04it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W/L:  0.827\n",
+      "['Al Horford', 'Davis Bertans', 'Dennis Schroder', 'Keifer Sykes', 'Cedi Osman', 'Derrick Jones Jr.', 'Miles Bridges', 'Keldon Johnson', 'Anthony Edwards', 'Onyeka Okongwu', 'Isaiah Stewart', 'Desmond Bane', 'Greg Brown III']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:14<00:00, 69.61it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W/L:  0.958\n",
+      "['P.J. Tucker', 'D.J. Augustin', 'Kyrie Irving', 'Davis Bertans', 'Dorian Finney-Smith', 'Jaren Jackson Jr.', 'Deandre Ayton', 'Cam Reddish', 'Payton Pritchard', 'Matt Ryan', 'Sam Hauser', 'McKinley Wright IV', 'Aaron Wiggins']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:13<00:00, 73.25it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W/L:  0.985\n",
+      "['Paul George', 'Terrence Ross', 'Montrezl Harrell', 'Stanley Johnson', 'Domantas Sabonis', 'Danuel House Jr.', 'Deandre Ayton', 'Brandon Clarke', 'Miye Oni', 'Devontae Cacok', 'Patrick Williams', 'Kenyon Martin Jr.', 'Sandro Mamukelashvili']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:14<00:00, 70.46it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W/L:  0.991\n",
+      "['Al Horford', 'Jeff Green', 'Tony Snell', 'Khem Birch', 'Danuel House Jr.', 'Javin DeLaurier', 'Malachi Flynn', 'Naji Marshall', 'Trent Forrest', 'Herbert Jones', 'Kai Jones', 'Chaundee Brown Jr.', 'Georgios Kalaitzakis']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:20<00:00, 49.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W/L:  0.998\n",
+      "['Paul George', 'Marcus Smart', 'Willie Cauley-Stein', 'Cedi Osman', 'Gary Payton II', 'Dorian Finney-Smith', 'Shai Gilgeous-Alexander', 'Wenyen Gabriel', 'Isaiah Roby', 'Saddiq Bey', 'Jericho Sims', 'DJ Stewart', 'Georgios Kalaitzakis']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:15<00:00, 66.46it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W/L:  1.0\n",
+      "Super Team Found\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "super_team_ids = get_super_team()"
    ]
@@ -393,6 +527,13 @@
    "metadata": {},
    "source": [
     "['Paul George', 'Tobias Harris', 'Steven Adams', 'Josh Richardson', 'Frank Ntilikina', 'Isaiah Hartenstein', 'Theo Pinson', 'Reggie Perry', 'Matisse Thybulle', 'Immanuel Quickley', 'Alperen Sengun', 'Isaiah Livers', 'Mac McClung']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['Paul George', 'Marcus Smart', 'Willie Cauley-Stein', 'Cedi Osman', 'Gary Payton II', 'Dorian Finney-Smith', 'Shai Gilgeous-Alexander', 'Wenyen Gabriel', 'Isaiah Roby', 'Saddiq Bey', 'Jericho Sims', 'DJ Stewart', 'Georgios Kalaitzakis']"
    ]
   },
   {
