--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -36,16 +36,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = xgb.XGBRegressor()\n",
-    "model.load_model(\"models/13_player_model.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -62,17 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Performances...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "active_player_performances = pd.DataFrame(\n",
     "    list(\n",
@@ -92,22 +74,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulate_regular_season():\n",
+    "average_performances = average_performances[average_performances.MIN>10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_size = 1\n",
+    "model = xgb.XGBRegressor()\n",
+    "model.load_model(f\"models/{team_size}_player_model.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_regular_season(team_size = 13):\n",
     "    teams = season_performances.TEAM_ABBREVIATION.unique()\n",
     "    results_dict = {}\n",
     "    for i,team_A in tqdm(enumerate(teams),total=len(teams)):\n",
     "        win_loss_list = []\n",
     "        player_ids = list(set(season_performances[season_performances.TEAM_ABBREVIATION==team_A].PLAYER_ID))\n",
     "        team_A_features = average_performances[average_performances.PLAYER_ID.isin(player_ids)].sort_values('MIN',ascending=False)\n",
-    "        team_A_features = team_A_features.iloc[:13,2:].reset_index(drop=True)\n",
+    "        team_A_features = team_A_features.iloc[:team_size,2:].reset_index(drop=True)\n",
     "        for team_B in [*teams[:i], *teams[i+1:]]:\n",
     "            player_ids = list(set(season_performances[season_performances.TEAM_ABBREVIATION==team_B].PLAYER_ID))\n",
     "            team_B_features = average_performances[average_performances.PLAYER_ID.isin(player_ids)].sort_values('MIN',ascending=False)\n",
-    "            team_B_features = team_B_features.iloc[:13,2:].reset_index(drop=True)\n",
+    "            team_B_features = team_B_features.iloc[:team_size,2:].reset_index(drop=True)\n",
     "\n",
     "            team_A_feature_df = pd.concat(\n",
     "                        [\n",
@@ -144,35 +146,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:15<00:00,  1.91it/s]\n"
+      "100%|██████████| 28/28 [00:08<00:00,  3.36it/s]\n"
      ]
     }
    ],
    "source": [
-    "results_dict = simulate_regular_season()"
+    "results_dict = simulate_regular_season(team_size=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulate_matchup(team_abbreviation_A, team_abbreviation_B):\n",
+    "def simulate_matchup(team_abbreviation_A, team_abbreviation_B, team_size=13):\n",
     "    player_ids = list(set(season_performances[season_performances.TEAM_ABBREVIATION==team_abbreviation_A].PLAYER_ID))\n",
     "    team_A_features = average_performances[average_performances.PLAYER_ID.isin(player_ids)].sort_values('MIN',ascending=False)\n",
-    "    team_A_features = team_A_features.iloc[:13,2:].reset_index(drop=True)\n",
+    "    team_A_features = team_A_features.iloc[:team_size,2:].reset_index(drop=True)\n",
     "\n",
     "    player_ids = list(set(season_performances[season_performances.TEAM_ABBREVIATION==team_abbreviation_B].PLAYER_ID))\n",
     "    team_B_features = average_performances[average_performances.PLAYER_ID.isin(player_ids)].sort_values('MIN',ascending=False)\n",
-    "    team_B_features = team_B_features.iloc[:13,2:].reset_index(drop=True)\n",
+    "    team_B_features = team_B_features.iloc[:team_size,2:].reset_index(drop=True)\n",
     "\n",
     "    team_A_feature_df = pd.concat(\n",
     "                [\n",
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,12 +308,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_super_team():\n",
-    "    team_A_player_ids = average_performances[[\"PLAYER_ID\", \"PLAYER_NAME\"]].sample(13).PLAYER_ID\n",
+    "def get_super_team(team_size = 13):\n",
+    "    team_A_player_ids = average_performances[[\"PLAYER_ID\", \"PLAYER_NAME\"]].sample(team_size).PLAYER_ID\n",
     "    for i in range(10):\n",
     "        if i>0:\n",
     "            if better_teams:\n",
@@ -323,13 +325,13 @@
     "        players = team_A_features.PLAYER_NAME.to_list()\n",
     "        print(players)\n",
     "        \n",
-    "        team_A_features = team_A_features.iloc[:13,2:].reset_index(drop=True)\n",
+    "        team_A_features = team_A_features.iloc[:team_size,2:].reset_index(drop=True)\n",
     "        win_loss_list = []\n",
     "        better_teams = []\n",
     "        for _ in tqdm(range(1000)):\n",
-    "            team_B_player_ids = average_performances[[\"PLAYER_ID\", \"PLAYER_NAME\"]].sample(13).PLAYER_ID\n",
+    "            team_B_player_ids = average_performances[[\"PLAYER_ID\", \"PLAYER_NAME\"]].sample(team_size).PLAYER_ID\n",
     "            team_B_features = average_performances[average_performances[\"PLAYER_ID\"].isin(team_B_player_ids)]\n",
-    "            team_B_features = team_B_features.iloc[:13,2:].reset_index(drop=True)\n",
+    "            team_B_features = team_B_features.iloc[:team_size,2:].reset_index(drop=True)\n",
     "            team_A_feature_df = pd.concat(\n",
     "                    [\n",
     "                        stack_df(\n",
@@ -366,134 +368,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Robin Lopez', 'Blake Griffin', 'Cory Joseph', 'Bradley Beal', 'Will Barton', 'Caris LeVert', 'Mychal Mulder', 'Udoka Azubuike', 'Donte DiVincenzo', 'Devontae Cacok', 'Hassani Gravett', 'Lamar Stevens', 'McKinley Wright IV']\n"
+      "['Larry Nance Jr.']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:14<00:00, 68.95it/s]\n"
+      "100%|██████████| 1000/1000 [00:08<00:00, 112.26it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.133\n",
-      "['Khris Middleton', 'Spencer Dinwiddie', 'Stanley Johnson', 'Malik Monk', 'D.J. Wilson', 'Maxi Kleber', 'Troy Brown Jr.', 'Josh Okogie', 'Kyle Guy', 'Jalen McDaniels', 'Isaiah Stewart', 'Marko Simonovic', 'Terry Taylor']\n"
+      "W/L:  0.548\n",
+      "['Kyle Lowry']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:14<00:00, 70.70it/s]\n"
+      "100%|██████████| 1000/1000 [00:07<00:00, 135.66it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.813\n",
-      "['Davis Bertans', 'Nerlens Noel', 'Raul Neto', 'Doug McDermott', 'Dwight Powell', 'Andrew Wiggins', 'Jarred Vanderbilt', 'P.J. Washington', 'Chris Chiozza', 'KZ Okpala', 'Garrison Mathews', 'Malachi Flynn', 'Saben Lee']\n"
+      "W/L:  0.822\n",
+      "['Donovan Mitchell']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:14<00:00, 71.04it/s]\n"
+      "100%|██████████| 1000/1000 [00:08<00:00, 117.21it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.827\n",
-      "['Al Horford', 'Davis Bertans', 'Dennis Schroder', 'Keifer Sykes', 'Cedi Osman', 'Derrick Jones Jr.', 'Miles Bridges', 'Keldon Johnson', 'Anthony Edwards', 'Onyeka Okongwu', 'Isaiah Stewart', 'Desmond Bane', 'Greg Brown III']\n"
+      "W/L:  0.875\n",
+      "['Moritz Wagner']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:14<00:00, 69.61it/s]\n"
+      "100%|██████████| 1000/1000 [00:08<00:00, 124.87it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.958\n",
-      "['P.J. Tucker', 'D.J. Augustin', 'Kyrie Irving', 'Davis Bertans', 'Dorian Finney-Smith', 'Jaren Jackson Jr.', 'Deandre Ayton', 'Cam Reddish', 'Payton Pritchard', 'Matt Ryan', 'Sam Hauser', 'McKinley Wright IV', 'Aaron Wiggins']\n"
+      "W/L:  0.903\n",
+      "['Dean Wade']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:13<00:00, 73.25it/s]\n"
+      "100%|██████████| 1000/1000 [00:08<00:00, 112.31it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.985\n",
-      "['Paul George', 'Terrence Ross', 'Montrezl Harrell', 'Stanley Johnson', 'Domantas Sabonis', 'Danuel House Jr.', 'Deandre Ayton', 'Brandon Clarke', 'Miye Oni', 'Devontae Cacok', 'Patrick Williams', 'Kenyon Martin Jr.', 'Sandro Mamukelashvili']\n"
+      "W/L:  0.925\n",
+      "['Marcus Smart']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:14<00:00, 70.46it/s]\n"
+      "100%|██████████| 1000/1000 [00:08<00:00, 111.76it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.991\n",
-      "['Al Horford', 'Jeff Green', 'Tony Snell', 'Khem Birch', 'Danuel House Jr.', 'Javin DeLaurier', 'Malachi Flynn', 'Naji Marshall', 'Trent Forrest', 'Herbert Jones', 'Kai Jones', 'Chaundee Brown Jr.', 'Georgios Kalaitzakis']\n"
+      "W/L:  0.984\n",
+      "['Marcus Smart']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:20<00:00, 49.28it/s]\n"
+      "100%|██████████| 1000/1000 [00:07<00:00, 129.61it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.998\n",
-      "['Paul George', 'Marcus Smart', 'Willie Cauley-Stein', 'Cedi Osman', 'Gary Payton II', 'Dorian Finney-Smith', 'Shai Gilgeous-Alexander', 'Wenyen Gabriel', 'Isaiah Roby', 'Saddiq Bey', 'Jericho Sims', 'DJ Stewart', 'Georgios Kalaitzakis']\n"
+      "W/L:  0.981\n",
+      "['Kevin Durant']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:15<00:00, 66.46it/s]"
+      "100%|██████████| 1000/1000 [00:07<00:00, 129.03it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  1.0\n",
-      "Super Team Found\n"
+      "W/L:  0.997\n",
+      "['Kevin Durant']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:07<00:00, 126.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W/L:  0.999\n",
+      "['Kevin Durant']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:08<00:00, 113.80it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W/L:  0.994\n"
      ]
     },
     {
@@ -505,7 +536,7 @@
     }
    ],
    "source": [
-    "super_team_ids = get_super_team()"
+    "super_team_ids = get_super_team(team_size=1)"
    ]
   },
   {
@@ -513,6 +544,13 @@
    "metadata": {},
    "source": [
     "**Super Teams**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Full Team"
    ]
   },
   {
@@ -534,6 +572,20 @@
    "metadata": {},
    "source": [
     "['Paul George', 'Marcus Smart', 'Willie Cauley-Stein', 'Cedi Osman', 'Gary Payton II', 'Dorian Finney-Smith', 'Shai Gilgeous-Alexander', 'Wenyen Gabriel', 'Isaiah Roby', 'Saddiq Bey', 'Jericho Sims', 'DJ Stewart', 'Georgios Kalaitzakis']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Starting 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['Stephen Curry', 'Robert Covington', 'Marcus Smart', 'Jayson Tatum', 'Payton Pritchard']"
    ]
   },
   {
