--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,11 @@
     "from tqdm import tqdm\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score\n",
+    "from constants import MONGO_NAME,MONGO_PW, MONGO_DB\n",
     "\n",
-    "client = pymongo.MongoClient(\"mongodb+srv://superteam:4NgVPcNjmKBQkMTd@cluster0.sfhws.mongodb.net/dev?retryWrites=true&w=majority\")\n",
+    "client = pymongo.MongoClient(\n",
+    "    f\"mongodb+srv://{MONGO_NAME}:{MONGO_PW}@cluster0.sfhws.mongodb.net/{MONGO_DB}?retryWrites=true&w=majority\"\n",
+    ")\n",
     "db = client.superteam"
    ]
   },
