--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -2,25 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/main/lib/python3.9/site-packages/xgboost/compat.py:31: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pymongo\n",
     "import random\n",
-    "client = pymongo.MongoClient(\n",
-    "    \"mongodb+srv://superteam:4NgVPcNjmKBQkMTd@cluster0.sfhws.mongodb.net/dev?retryWrites=true&w=majority\"\n",
-    ")\n",
-    "db = client.superteam\n",
+    "from constants import MONGO_NAME, MONGO_PW, MONGO_DB\n",
     "import pandas as pd\n",
     "from nba_api.stats.static import players\n",
     "from helpers import (\n",
@@ -32,6 +20,18 @@
     "import xgboost as xgb\n",
     "from tqdm import tqdm\n",
     "from nba_api.stats.endpoints import leaguegamefinder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = pymongo.MongoClient(\n",
+    "    f\"mongodb+srv://{MONGO_NAME}:{MONGO_PW}@cluster0.sfhws.mongodb.net/{MONGO_DB}?retryWrites=true&w=majority\"\n",
+    ")\n",
+    "db = client.superteam"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,20 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "average_performances = average_performances[average_performances.MIN>10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "team_size = 1\n",
+    "team_size = 13\n",
     "model = xgb.XGBRegressor()\n",
     "model.load_model(f\"models/{team_size}_player_model.json\")"
    ]
@@ -163,11 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulate_matchup(team_abbreviation_A, team_abbreviation_B, team_size=13):\n",
+    "def simulate_matchup_1(team_abbreviation_A, team_abbreviation_B, team_size=13):\n",
     "    player_ids = list(set(season_performances[season_performances.TEAM_ABBREVIATION==team_abbreviation_A].PLAYER_ID))\n",
     "    team_A_features = average_performances[average_performances.PLAYER_ID.isin(player_ids)].sort_values('MIN',ascending=False)\n",
     "    team_A_features = team_A_features.iloc[:team_size,2:].reset_index(drop=True)\n",
@@ -204,31 +195,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6.308787 , 1.5637933], dtype=float32)"
+       "array([ 6.204123 , -1.0687407], dtype=float32)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "simulate_matchup('BOS','PHX')"
+    "simulate_matchup_1('BOS','PHX')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_tournament(performances, rounds=1, team_count=32, team_size=13):\n",
+    "def simulate_matchup_2(team_a_player_ids, team_b_player_ids, team_size=13):\n",
+    "    team_A_features = average_performances[average_performances.PLAYER_ID.isin(team_a_player_ids)].sort_values('MIN',ascending=False)\n",
+    "    team_A_features = team_A_features.iloc[:team_size,2:].reset_index(drop=True)\n",
+    "\n",
+    "    team_B_features = average_performances[average_performances.PLAYER_ID.isin(team_b_player_ids)].sort_values('MIN',ascending=False)\n",
+    "    team_B_features = team_B_features.iloc[:team_size,2:].reset_index(drop=True)\n",
+    "\n",
+    "    team_A_feature_df = pd.concat(\n",
+    "                [\n",
+    "                    stack_df(\n",
+    "                        pd.concat([team_A_features, team_B_features]).reset_index(\n",
+    "                            drop=True\n",
+    "                        )\n",
+    "                    )\n",
+    "                ],\n",
+    "                axis=1,\n",
+    "            )\n",
+    "    team_B_feature_df = pd.concat(\n",
+    "                [\n",
+    "                    stack_df(\n",
+    "                        pd.concat([team_B_features, team_A_features]).reset_index(\n",
+    "                            drop=True\n",
+    "                        )\n",
+    "                    )\n",
+    "                ],\n",
+    "                axis=1,\n",
+    "            )\n",
+    "    plus_minus_prediction = model.predict(\n",
+    "                pd.concat([team_A_feature_df, team_B_feature_df])\n",
+    "            )\n",
+    "    return plus_minus_prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_tournament(performances, rounds=1, team_count=16, team_size=13):\n",
     "    winner = False\n",
     "    winner_list = []\n",
     "\n",
@@ -255,12 +285,12 @@
     "                team_A_features = teamA.iloc[:, 2:].reset_index(drop=True)\n",
     "                team_B_features = teamB.iloc[:, 2:].reset_index(drop=True)\n",
     "\n",
-    "                print(\n",
-    "                    \"Team A: \",\n",
-    "                    teamA.sort_values(\"MIN\", ascending=False).PLAYER_NAME.to_list(),\n",
-    "                    \"\\nTeam B: \",\n",
-    "                    teamB.sort_values(\"MIN\", ascending=False).PLAYER_NAME.to_list(),\n",
-    "                )\n",
+    "                # print(\n",
+    "                #     \"Team A: \",\n",
+    "                #     teamA.sort_values(\"MIN\", ascending=False).PLAYER_NAME.to_list(),\n",
+    "                #     \"\\nTeam B: \",\n",
+    "                #     teamB.sort_values(\"MIN\", ascending=False).PLAYER_NAME.to_list(),\n",
+    "                # )\n",
     "                team_A_feature_df = pd.concat(\n",
     "                    [\n",
     "                        stack_df(\n",
@@ -287,20 +317,20 @@
     "\n",
     "                if plus_minus_prediction[0] > plus_minus_prediction[1]:\n",
     "                    team_list.append(teamA)\n",
-    "                    print(\"Team A wins\")\n",
+    "                    # print(\"Team A wins\")\n",
     "                else:\n",
     "                    team_list.append(teamB)\n",
-    "                    print(\"Team B wins\")\n",
+    "                    # print(\"Team B wins\")\n",
     "\n",
     "        if len(team_list) == 1:\n",
     "            winner_team = team_list[0]\n",
-    "            print(\n",
-    "                \"Winner Team: \",\n",
-    "                winner_team.sort_values(\"MIN\", ascending=False).PLAYER_NAME.to_list(),\n",
-    "            )\n",
+    "            # print(\n",
+    "            #     \"Winner Team: \",\n",
+    "            #     winner_team.sort_values(\"MIN\", ascending=False).PLAYER_NAME.to_list(),\n",
+    "            # )\n",
     "            winner = True\n",
     "            winner_list.append(\n",
-    "                winner_team.sort_values(\"MIN\", ascending=False).PLAYER_NAME.to_list()\n",
+    "                winner_team.sort_values(\"MIN\", ascending=False).PLAYER_ID.to_list()\n",
     "            )\n",
     "\n",
     "    return winner_list"
@@ -308,7 +338,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [03:16<00:00,  5.10it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "winner_list = run_tournament(average_performances,rounds=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +375,7 @@
     "        team_A_features = team_A_features.iloc[:team_size,2:].reset_index(drop=True)\n",
     "        win_loss_list = []\n",
     "        better_teams = []\n",
-    "        for _ in tqdm(range(1000)):\n",
+    "        for _ in tqdm(range(100)):\n",
     "            team_B_player_ids = average_performances[[\"PLAYER_ID\", \"PLAYER_NAME\"]].sample(team_size).PLAYER_ID\n",
     "            team_B_features = average_performances[average_performances[\"PLAYER_ID\"].isin(team_B_player_ids)]\n",
     "            team_B_features = team_B_features.iloc[:team_size,2:].reset_index(drop=True)\n",
@@ -368,163 +415,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Larry Nance Jr.']\n"
+      "['Taj Gibson', 'Patty Mills', 'Nikola Vucevic', 'Joel Embiid', 'Myles Turner', 'Cedi Osman', 'Lauri Markkanen', 'Torrey Craig', 'Keita Bates-Diop', 'Ja Morant', 'Killian Tillie', 'Herbert Jones', 'Corey Kispert']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:08<00:00, 112.26it/s]\n"
+      "100%|██████████| 100/100 [00:01<00:00, 67.12it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.548\n",
-      "['Kyle Lowry']\n"
+      "W/L:  0.35\n",
+      "['Nikola Vucevic', 'Brandon Ingram', 'Danuel House Jr.', 'Derrick Jones Jr.', 'Lauri Markkanen', 'Eric Paschall', 'Killian Tillie', 'Deni Avdija', 'Devin Vassell', 'Aleksej Pokusevski', 'Brodric Thomas', 'James Bouknight', 'Cade Cunningham']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:07<00:00, 135.66it/s]\n"
+      "100%|██████████| 100/100 [00:01<00:00, 72.02it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.822\n",
-      "['Donovan Mitchell']\n"
+      "W/L:  0.38\n",
+      "['Jae Crowder', 'JaMychal Green', 'Malcolm Brogdon', 'Bam Adebayo', 'Kevin Porter Jr.', 'Naz Reid', 'Admiral Schofield', 'Jay Scrubb', 'Brandon Boston Jr.', 'Greg Brown III', 'Bones Hyland', 'Jalen Suggs', 'Terry Taylor']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:08<00:00, 117.21it/s]\n"
+      "100%|██████████| 100/100 [00:01<00:00, 84.87it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.875\n",
-      "['Moritz Wagner']\n"
+      "W/L:  0.66\n",
+      "['Al Horford', 'Nicolas Batum', 'Patrick Beverley', 'Kyle Anderson', 'Tyus Jones', 'Kelly Oubre Jr.', 'Norman Powell', 'Furkan Korkmaz', 'Fred VanVleet', 'Goga Bitadze', 'Nassir Little', 'Dean Wade', \"Day'Ron Sharpe\"]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:08<00:00, 124.87it/s]\n"
+      "100%|██████████| 100/100 [00:01<00:00, 84.02it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.903\n",
-      "['Dean Wade']\n"
+      "W/L:  0.76\n",
+      "['Kevin Durant', 'DeMar DeRozan', 'Enes Freedom', 'Draymond Green', 'Aaron Gordon', 'Juancho Hernangomez', 'Jalen Brunson', 'Jaylen Nowell', 'Matt Thomas', 'Anthony Edwards', 'Jaden McDaniels', 'Isaiah Joe', 'Josh Christopher']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:08<00:00, 112.31it/s]\n"
+      "100%|██████████| 100/100 [00:01<00:00, 63.69it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.925\n",
-      "['Marcus Smart']\n"
+      "W/L:  0.93\n",
+      "['Trevor Ariza', 'James Harden', 'Avery Bradley', 'Steven Adams', 'Trey Lyles', 'Kevon Looney', 'Pascal Siakam', 'Luka Doncic', 'Duncan Robinson', 'Keldon Johnson', 'Matt Thomas', 'Jared Butler', 'Kenyon Martin Jr.']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:08<00:00, 111.76it/s]\n"
+      "100%|██████████| 100/100 [00:01<00:00, 81.77it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W/L:  0.984\n",
-      "['Marcus Smart']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:07<00:00, 129.61it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.981\n",
-      "['Kevin Durant']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:07<00:00, 129.03it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.997\n",
-      "['Kevin Durant']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:07<00:00, 126.67it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.999\n",
-      "['Kevin Durant']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:08<00:00, 113.80it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/L:  0.994\n"
+      "W/L:  1.0\n",
+      "Super Team Found\n"
      ]
     },
     {
@@ -536,7 +524,21 @@
     }
    ],
    "source": [
-    "super_team_ids = get_super_team(team_size=1)"
+    "super_team_ids = get_super_team(team_size=13)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tournament Winner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['Goran Dragic', 'Kyrie Irving', 'Kent Bazemore', 'Otto Porter Jr.', 'Jusuf Nurkic', 'Bobby Portis', 'Udoka Azubuike', 'Bruce Brown', 'Jevon Carter', 'Nic Claxton', 'Admiral Schofield', 'Jaden McDaniels', 'Justin Champagnie']"
    ]
   },
   {
@@ -586,6 +588,141 @@
    "metadata": {},
    "source": [
     "['Stephen Curry', 'Robert Covington', 'Marcus Smart', 'Jayson Tatum', 'Payton Pritchard']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "celtics = list(set(season_performances[season_performances.TEAM_ABBREVIATION=='BOS'].PLAYER_ID))[:13]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_A_player_ids = winner_list[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Goran Dragic', 'Kyrie Irving', 'Kent Bazemore', 'Otto Porter Jr.', 'Jusuf Nurkic', 'Bobby Portis', 'Udoka Azubuike', 'Bruce Brown', 'Jevon Carter', 'Nic Claxton', 'Admiral Schofield', 'Jaden McDaniels', 'Justin Champagnie']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10000/10000 [02:37<00:00, 63.35it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W/L:  1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_A_features = average_performances[average_performances[\"PLAYER_ID\"].isin(team_A_player_ids)]\n",
+    "indicies = team_A_features.index\n",
+    "print(team_A_features.PLAYER_NAME.to_list())\n",
+    "\n",
+    "team_A_features = team_A_features.iloc[:team_size,2:].reset_index(drop=True)\n",
+    "win_loss_list = []\n",
+    "better_teams = []\n",
+    "for _ in tqdm(range(1000)):\n",
+    "    \n",
+    "    team_B_player_ids = average_performances.drop(indicies)[[\"PLAYER_ID\", \"PLAYER_NAME\"]].sample(team_size).PLAYER_ID\n",
+    "    team_B_features = average_performances[average_performances[\"PLAYER_ID\"].isin(team_B_player_ids)]\n",
+    "    team_B_features = team_B_features.iloc[:team_size,2:].reset_index(drop=True)\n",
+    "    team_A_feature_df = pd.concat(\n",
+    "            [\n",
+    "                stack_df(\n",
+    "                    pd.concat([team_A_features, team_B_features]).reset_index(\n",
+    "                        drop=True\n",
+    "                    )\n",
+    "                )\n",
+    "            ],\n",
+    "            axis=1,\n",
+    "        )\n",
+    "    team_B_feature_df = pd.concat(\n",
+    "                [\n",
+    "                    stack_df(\n",
+    "                        pd.concat([team_B_features, team_A_features]).reset_index(\n",
+    "                            drop=True\n",
+    "                        )\n",
+    "                    )\n",
+    "                ],\n",
+    "                axis=1,\n",
+    "            )\n",
+    "    plus_minus_prediction = model.predict(\n",
+    "                pd.concat([team_A_feature_df, team_B_feature_df])\n",
+    "            )\n",
+    "    if plus_minus_prediction[0] > plus_minus_prediction[1]:\n",
+    "        win_loss_list.append(1)\n",
+    "    else:\n",
+    "        win_loss_list.append(0)\n",
+    "        better_teams.append(team_B_player_ids)\n",
+    "\n",
+    "print('W/L: ', np.mean(win_loss_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DeAndre Jordan', 'Dwight Powell', 'Justise Winslow', \"De'Aaron Fox\", 'Josh Hart', 'Wendell Carter Jr.', 'Donte DiVincenzo', 'Jaren Jackson Jr.', 'Nic Claxton', 'Killian Tillie', 'Dylan Windler', 'Franz Wagner', 'Miles McBride']\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_features = average_performances[average_performances[\"PLAYER_ID\"].isin(better_teams[5])]\n",
+    "print(team_features.PLAYER_NAME.to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5.4460435, 2.3747196], dtype=float32)"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simulate_matchup_2(winner_list[-1],celtics)"
    ]
   },
   {
